--- a/iuca.tech.reserve/Web/Views/Users/Index.cshtml
+++ b/iuca.tech.reserve/Web/Views/Users/Index.cshtml
@@ -45,6 +45,18 @@
                         <input type="email" class="form-control shadow-none rounded-4" id="email" required>
                     </div>
                     <div class="form-group my-2">
+                        <label for="firstName">
+                            First name
+                        </label>
+                        <input type="text" class="form-control shadow-none rounded-4" id="firstName">
+                    </div>
+                    <div class="form-group my-2">
+                        <label for="lastName">
+                            Last name
+                        </label>
+                        <input type="text" class="form-control shadow-none rounded-4" id="lastName">
+                    </div>
+                    <div class="form-group my-2">
                         <label for="role">
                             Role
                         </label>
